# Da_Vincibot

./: Davinci_wasdkeyboardcontroller.py  contour.py  rostoard.ino  wasdkeyboardcontroller.py
3D Designs/: ARM 3 Real.iam
3D Designs/End-Effector/: 00_End-Effector.iam  End-Link.ipt  End.ipt  Suction-brack.ipt  Suction.ipt
3D Designs/Forearm/: 00_Forearm.iam  12mm Flange.ipt  47T-Sprocket.ipt  Forearm-End Fork.ipt  Forearm-Link.ipt  Forearm-Shaft.ipt  Joint_3_House.ipt  Pulley-35.ipt
3D Designs/Foundation/: 00_Foundation.iam  11T-Sprocket.ipt  56T-Sprocket.ipt  Base-Shaft.ipt  Base_Motor_Mount.ipt  Bearing Plate.ipt  Castor.ipt  Compressor.ipt  DC Motor 100kgcm.ipt  Foundation-Base.ipt  Foundation-Fork.ipt  Foundation-Motor-Mount.ipt  Roller-Plate.ipt  Stage.ipt
3D Designs/Hand/: 00_Hand.iam  Bear-house.ipt  Flange.ipt  Hand-End Fork.ipt  Hand-Link.ipt  Pulley-70.ipt  Servo-house.ipt  Shaft.ipt
3D Designs/Orienter/: Align_Roller.ipt  Aligner.ipt  Base.ipt  Bear_fix.ipt  Conveyor.ipt  Motor_Couple.ipt  Orienter.ipt  Orienter_Assembly.iam  Push.iam  Push_motor_fix.ipt  Roller.ipt  Screw.ipt  Servo_fix.ipt  Servo_horn_big.ipt  Structure.ipt  Tensioner.ipt  Tensioner_fix.ipt
3D Designs/Servos/: 60 kg cm Servo.ipt  Servo MG964R.ipt
Control_Software/Billie_Servo/: Billie_Servo.ino
Control_Software/Billie_Servo_2/: Billie_Servo_2.ino
Control_Software/DaVinci_Arduino/: DaVinci_Arduino.ino
Control_Software/DaVinci_Main/: DaVinci_Main.ino
Control_Software/Humanoid_Ref/: component_name.py
DaVinci_Main/: DaVinci_Main.ino
Firmware/: Billie_Servo.ino
Firmware/Humanoid_Ref/: Humanoid.py  main_2.py
URDF/: foundation_base.stl  foundation_fork.stl  stage.stl
URDF/STEP/: 00_End-Effector.stp  00_Forearm.stp  00_Foundation.stp  00_Hand.stp  arducam.stp  shoulder.stp  stage.stp
URDF/STL/: end_effector.stl  forearm.stl  hand.stl
da_vincibot_description/launch/: controller.yaml  gazebo.launch
da_vincibot_description/meshes/: arducam_v1_1.stl  base_link.stl  end_effector_1.stl  forearm_1.stl  foundation_base_1.stl  hand_1.stl  hand_yaw_1.stl  shoulder_1.stl
da_vincibot_description/urdf/: da_vincibot.gazebo  da_vincibot.trans  da_vincibot.xacro
da_vincibot_moveit/: CMakeLists.txt  package.xml
da_vincibot_moveit/config/: da_vincibot.srdf  fake_controllers.yaml  gazebo_da_vincibot.urdf  kinematics.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml
da_vincibot_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
final_description/: package.xml  setup.cfg  setup.py
final_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch.py
final_description/meshes/: base_link.stl  end_effector_1.stl  forearm_1.stl  foundation__base_1.stl  foundation_fork_1.stl  hand_1.stl  hand_fork_1.stl
final_description/urdf/: final.gazebo  final.trans  final.xacro
hi/devel/: .catkin  .rosinstall
hi/src/vincicontrol/: CMakeLists.txt
hi/src/vincicontrol/scripts/: angle_sim.py  moveittoard.py  trial.py  trialpub.py
image_processing/: contournew.py
moveit_config/: package.xml
moveit_config/config/: fake_controllers.yaml  gazebo_robotic.urdf  ompl_planning.yaml  robotic.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
moveit_config/launch/: gazebo.launch  move_group.launch  planning_context.launch  sensor_manager.launch.xml
pointcloud/: readme.md
test/: pointcloud2.py  test.py
vinci_description/: package.xml
(+176 files in other folders)
